# humor

./: .dockerignore  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  Tiltfile  arena.Dockerfile  buf.gen.yaml  cloudbuild.yaml  firestore.indexes.json  gazelle_python.yaml  go.mod  go.sum  leaderboard.Dockerfile  requirements.in  requirements.txt  requirements_lock.txt
notebooks/: cleanup.ipynb  dump-jokes.ipynb
proto/: server.proto
scripts/: batch_generate.py  concurrency.py  moderation.py
scripts/backfill/: BUILD.bazel  __main__.py
scripts/generate/: BUILD.bazel  __main__.py  parse_jokes.py  theme_set_v2.txt
scripts/generator/: main.py  models.py  process_onliners.py
scripts/leaderboard/: BUILD.bazel  __main__.py
scripts/stats/: BUILD.bazel  __main__.py
server/cmd/populate_test_data/: main.go
server/cmd/server/: main.go
server/internal/server/: random.go  server.go  top-jokes.txt
server/newmanrank/: newman.go  newman_test.go
web/: index.html  package-lock.json  package.json
web/convex/: jokesMutations.ts  jokesQueries.ts  schema.ts
web/convex/_generated/: api.d.ts
web/convex/mutations/: assocs.ts  jokes.ts  models.ts  policies.ts  topics.ts
web/public/: index.html  manifest.json
web/src/: About.css  About.tsx  App.css  App.test.tsx  App.tsx  Arena.css  Arena.tsx  Compare.tsx  Footer.css  Footer.jsx  Header.css  Header.tsx  HumorArena.css  HumorArena.tsx  JokeCard.css  JokeCard.tsx  Leaderboard.css  Leaderboard.tsx  TopJokes.css  TopJokes.tsx  errorUtils.ts  index.css
web/src/apiClient/: runtime.ts
web/src/apiClient/.openapi-generator/: FILES
web/src/apiClient/apis/: ArenaApi.ts  index.ts
web/src/apiClient/models/: ArenaRateChoicesBody.ts  ProtobufAny.ts  RpcStatus.ts  V1GetChoicesResponse.ts  V1GetLeaderboardResponse.ts  V1GetTopJokesResponse.ts  V1LeaderboardEntry.ts  V1TopJokesEntry.ts  V1Winner.ts  index.ts
