"""
https://github.com/bazelbuild/rules_python/releases.
"""

bazel_dep(name = "rules_python", version = "0.37.2")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.37.2")
bazel_dep(name = "gazelle", version = "0.39.1", repo_name = "bazel_gazelle")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
use_repo(python, "python_3_11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
