load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "generate",
    srcs = ["parse_jokes.py"],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "generate_bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//litellm",
        "@pip//tqdm",
    ],
)
