load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "leaderboard_bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//evalica",
        "@pip//google_cloud_firestore",
    ],
)

py_library(
    name = "leaderboard",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
)
